@@ -289,6 +289,8 @@ set none, one, several, or all options. The available options are as follows:
     
     \item{\code{RExcelSupport}}{If \code{TRUE} (the default is \code{FALSE}), menus and output are handled by Excel.}
     
+    \item{\code{rmarkdown.output}}{Values of several options for converting R Markdown to a document file. The default for this option is \code{TRUE}, which corresponds to \code{markdown.output=list(command.sections=TRUE, section.level=3, toc=TRUE, toc_float=TRUE, toc_depth=3, number_sections=FALSE)}; the sub-option \code{command.sections} controls whether most R commands produce sections in the R Markdown document, the sub-option \code{section.level} controls the level of the sections that are created, and the other sub-options are standard for \code{\link[rmarkdown]{rmarkdown}}. The \code{toc_float}, \code{toc_float}, and \code{number_sections} sub-options are only effective if Pandoc is installed.}
+    
     \item{\code{rmd.output.format}}{The output file type for R Markdown documents if pandoc is installed; one of \code{"html"}
     (the default), \code{"pdf"} (requires LaTeX), \code{"docx"} (Word), or \code{"rtf"} (rich text file).}
     
