@@ -12,6 +12,8 @@ Changes in version 2.8-0
   
   o New minimum.width and minimum.height Rcmdr options, defaulting to 1000 and 400, respectively.
   
+  o Commands now can create sections (by default at level 3) and a table of contents in the R Markdown document produced by the R Commander (suggestion of Bob Muenchen).
+  
   o Small improvements.
 
 Changes in version 2.7-1
